--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,8 @@
-$primary-color: #333;
-$secondary-color: #000;
-$hover-color: #555;
-$background-color: #ff0606;
-$border-color: #e0e0e0;
+$primary-color: #F7F7F7;
+// $secondary-color: #F2F4F7;
+$hover-color: #D84343;
+$background-color: #F2F4F7;
+$color-text: #101828;
+$color-text-hover: #475467;
+
+$border-color-button: #E44848;
