--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,6 +1,5 @@
-
 $primary-color: #333;
-$secondary-color: #D84343;
+$secondary-color: #d84343;
 $hover-color: #555;
 $background-color: #f5f5f5;
 $border-color: #e0e0e0;
@@ -37,7 +36,7 @@ $border-color: #e0e0e0;
 
       &.active {
         font-weight: bold;
-        color: $secondary-color; 
+        color: $secondary-color;
       }
     }
   }
