--- a/src/components/CamperCard/CamperCard.module.scss
+++ b/src/components/CamperCard/CamperCard.module.scss
@@ -6,14 +6,18 @@
   background-color: #fff;
   max-width: 800px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+
 
   &__image {
     flex-shrink: 0;
     img {
-      width: 150px;
-      height: 150px;
+      width: 292px;
+      height: 320px;
       object-fit: cover;
       border-radius: 8px;
+    
+      border-radius: 10px;
     }
   }
 
@@ -80,10 +84,15 @@
       font-weight: 600;
       cursor: pointer;
       transition: background-color 0.3s ease;
-
       &:hover {
         background-color: #d62839;
       }
     }
+  }
+  .button{
+    display: flex;
+    justify-content: center
+
+
   }
 }
