--- a/src/pages/CamperDetailsPage/CamperDetailsPage.module.scss
+++ b/src/pages/CamperDetailsPage/CamperDetailsPage.module.scss
@@ -11,6 +11,12 @@
     height: 312px;
     object-fit: cover;
 }
+.formDetailContainer{
+    display: flex;
+    justify-content: space-between
+
+
+}
 
 .img{
     width: 2000px;
