add style, filter

--- a/src/pages/CamperDetailsPage/CamperDetailsPage.module.scss
+++ b/src/pages/CamperDetailsPage/CamperDetailsPage.module.scss
@@ -13,8 +13,8 @@
 }
 .formDetailContainer{
     display: flex;
-    justify-content: space-between
-
+    justify-content: space-between;
+border: 1px solid red
 
 }
 
