--- a/src/components/FormComponent/CalendarStyles.scss
+++ b/src/components/FormComponent/CalendarStyles.scss
@@ -6,7 +6,11 @@
     overflow: hidden;
    
   }
-  
+  ul{
+  list-style: none;     
+  padding: 0;           
+  margin: 0;
+  }
   .react-datepicker__header {
     background-color: #fff;
     border-bottom: 1px solid #d9d9d9;
