--- a/src/components/FormComponent/FormComponent.module.scss
+++ b/src/components/FormComponent/FormComponent.module.scss
@@ -1,6 +1,5 @@
 .form-container {
   max-width: 641px;
-  min-height: 60px;
   padding: 44px 57px;
   border: 1px solid #e0e0e0;
   border-radius: 10px;
@@ -91,4 +90,8 @@
   height: 56px;
   margin-left: auto;
   margin-right: auto;
+}
+h3{
+  margin: 0;
+  padding: 0;
 }
