--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,17 +11,16 @@ $border-color: #e0e0e0;
   background-color: $background-color;
   padding: 10px 20px;
   border-bottom: 2px solid $border-color;
-
+padding-left: 64px;
   .logo {
   
-      .logoLink {
-        text-decoration: none;
-        color: inherit;
-        
-        &:hover {
-          opacity: 0.8; // Эффект при наведении
-        }
+    .logoLink {
+      text-decoration: none;
+      color: inherit;
+      &:hover {
+        opacity: 0.8; 
       }
+    }
     
    
     h1 {
@@ -50,5 +49,8 @@ $border-color: #e0e0e0;
         color: $secondary-color;
       }
     }
+  }
+  span {
+    background-color: #d84343;
   }
 }
