--- a/src/components/CamperCard/CamperCard.module.scss
+++ b/src/components/CamperCard/CamperCard.module.scss
@@ -3,12 +3,14 @@
   flex-direction: column;
   background-color: #fff;
   border-radius: 16px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   padding: 16px;
   margin-bottom: 16px;
-
+  gap: 32px;
+ max-width: 888px;
+ width: 100%;
   &__content {
-    border: 1px solid red;
+    border: 1px solid rgba(218, 221, 225, 1);
+    border-radius: 10px;
     display: flex;
     align-items: flex-start;
     gap: 16px;
@@ -16,7 +18,8 @@
 
   &__image {
     flex-shrink: 0;
-
+    margin: 0;
+    padding: 24px 0 24px 24px;
     img {
       width: 292px;
       height: 320px;
@@ -30,6 +33,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
+    padding: 24px;
   }
 
   &__header {
@@ -87,23 +91,22 @@
     display: flex;
     gap: 8px;
     flex-wrap: wrap;
-  
+
     .feature {
       background-color: #f3f4f6;
       padding: 4px 8px;
       border-radius: 100px;
       font-size: 12px;
       color: #4b5563;
-      display: flex;          
-      align-items: center;     
-      justify-content: center; 
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 16px;
-      white-space: nowrap;    
+      white-space: nowrap;
       padding: 18px 12px;
       gap: 8px;
     }
   }
-  
 
   &__button {
     background-color: #e63946;
