--- a/src/components/DetailsCamper/DetailsCamper.module.scss
+++ b/src/components/DetailsCamper/DetailsCamper.module.scss
@@ -1,62 +1,65 @@
 .detailsContainer {
-    background-color: #f9fafb;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 631px;
-    width: 100%;
-    
+  background-color: #f9fafb;
+  padding: 52px 44px;
+  border-radius: 10px;
+  max-width: 631px;
+  width: 100%;
+  margin-right: 40px;
+}
+h3 {
+  border-bottom: 1px solid rgba(218, 221, 225, 1);
+  padding-bottom: 24px;
+  margin: 0;
+  margin-bottom: 24px;
+  font-size: 20px;
+  margin-top: 100px;
+}
+.camper-name {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.camper-description {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.details-section {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+.details-section h3 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.details-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 0;
   }
-  
-  .camper-name {
-    font-size: 24px;
+
+  .label {
     font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  .camper-description {
+    color: #333;
     font-size: 16px;
+  }
+
+  .value {
+    font-weight: 400;
     color: #555;
-    margin-bottom: 20px;
+    font-size: 16px;
+    font-weight: 500;
   }
-  
-  .details-section {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .details-section h3 {
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  .details-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  
-    li {
-      display: flex;
-      justify-content: space-between;
-      padding: 8px 0;
-      border-bottom: 1px solid #e0e0e0;
-  
-      &:last-child {
-        border-bottom: none;
-      }
-    }
-  
-    .label {
-      font-weight: 600;
-      color: #333;
-    }
-  
-    .value {
-      font-weight: 400;
-      color: #555;
-    }
-  }
-  
+}
