--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -6,7 +6,7 @@
 
 .feature {
   border-radius: 100px;
-  padding: 12px 18px;
+  padding: 0 18px;
   max-width: 143px;
   height: 48px;
   background-color: rgba(242, 244, 247, 1);
