--- a/src/components/FilterForm/FilterForm.module.scss
+++ b/src/components/FilterForm/FilterForm.module.scss
@@ -13,7 +13,7 @@
       display: flex;
       align-items: center;
       padding: 10px;
-      background-color: #f8f9fa;
+      background-color: #ffffff;
       border-radius: 8px;
 
       .icon {
@@ -30,10 +30,15 @@
   }
 
   .filters {
+
+width: 360px;
+
+
     h3 {
       font-size: 18px;
       margin-bottom: 10px;
     }
+
 
     .section {
       margin-bottom: 20px;
@@ -49,7 +54,7 @@
         flex-wrap: wrap;
 
         .option {
-          background-color: #f8f9fa;
+          all: unset;
           border: 1px solid #e5e7eb;
           border-radius: 8px;
           padding: 10px;
@@ -60,11 +65,12 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
-
+          cursor: pointer;
           img {
             margin-bottom: 5px;
             width: 24px;
             height: 24px;
+          
           }
 
           &.selected {
