--- a/src/components/CamperCard/CamperCard.module.scss
+++ b/src/components/CamperCard/CamperCard.module.scss
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 8px;
 
     &__price {
       font-size: 24px;
@@ -91,7 +92,6 @@
     display: flex;
     gap: 8px;
     flex-wrap: wrap;
-
     .feature {
       background-color: #f3f4f6;
       padding: 4px 8px;
@@ -109,16 +109,20 @@
   }
 
   &__button {
-    background-color: #e63946;
+    background-color: rgba(228, 72, 72, 1);
     color: #fff;
+    width: 166px;
+    height: 56px;
+    font-family: inherit;
     padding: 10px 16px;
     border: none;
-    border-radius: 8px;
-    font-size: 14px;
-    font-weight: 600;
+    border-radius: 200px;
+    font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-top: 16px;
+    font-weight: 500;
+    line-height: 1.5;
 
     &:hover {
       background-color: #d62839;
