--- a/src/components/FormComponent/FormComponent.module.scss
+++ b/src/components/FormComponent/FormComponent.module.scss
@@ -31,7 +31,6 @@
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   background-color: #f9f9f9;
-  color: #333;
   transition: background-color 0.3s ease;
 }
 
@@ -50,18 +49,24 @@
 .form-container .error {
   color: red;
   font-size: 0.875rem;
+  position: absolute;
+  top: -15px;
+  left: 0;
+}
+
+.form-container .input {
+  position: relative;
 }
 
 .form-container button {
-  width: 100%;
   padding: 15px;
   font-size: 1rem;
   color: white;
-  background-color: #f55353;
   border: none;
   border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width: 166px;
 }
 
 .form-container button:hover {
@@ -77,21 +82,21 @@
   display: flex;
   justify-content: space-around;
   flex-direction: row-reverse;
-
-  textarea {
-    resize: none; 
-    height: 118px;
- 
-
-  }
 }
-.btn  {
+
+textarea {
+  resize: none;
+  height: 118px;
+}
+
+.btn {
   width: 166px;
   height: 56px;
   margin-left: auto;
   margin-right: auto;
 }
-h3{
+
+h3, h2 {
   margin: 0;
   padding: 0;
 }
