--- a/src/components/FilterForm/FilterForm.module.scss
+++ b/src/components/FilterForm/FilterForm.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 360px;
 
   .location {
     label {
@@ -30,19 +31,20 @@
   }
 
   .filters {
-
-width: 360px;
-
+    // width: 360px;
 
     h3 {
       font-size: 18px;
       margin-bottom: 10px;
     }
 
-
     .section {
       margin-bottom: 20px;
 
+      &__h4 {
+        border-bottom: 1px solid rgba(218, 221, 225, 1);
+        padding-bottom: 24px;
+      }
       h4 {
         font-size: 16px;
         margin-bottom: 10px;
@@ -50,17 +52,18 @@ width: 360px;
 
       .grid {
         display: flex;
-        gap: 10px;
+        gap: 7px;
         flex-wrap: wrap;
-
+        svg {
+          margin-bottom: 8px;
+        }
         .option {
           all: unset;
           border: 1px solid #e5e7eb;
           border-radius: 8px;
-          padding: 10px;
           text-align: center;
-          width: 100px;
-          height: 80px;
+          width: 112px;
+          height: 96px;
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -70,7 +73,6 @@ width: 360px;
             margin-bottom: 5px;
             width: 24px;
             height: 24px;
-          
           }
 
           &.selected {
@@ -83,6 +85,8 @@ width: 360px;
 
   .searchButton {
     text-align: center;
+    display: flex;
+
 
     button {
       background-color: #d9534f;
@@ -92,6 +96,8 @@ width: 360px;
       padding: 12px 24px;
       font-size: 16px;
       cursor: pointer;
+      width: 166px;
+      height: 56px;
     }
   }
 }
