--- a/src/pages/CatalogPage/CatalogPage.module.scss
+++ b/src/pages/CatalogPage/CatalogPage.module.scss
@@ -1,4 +1,7 @@
 .container{
     display: flex;
-    flex-direction: row-reverse
+    flex-direction: row-reverse;
+    justify-content: space-between;
+
+
 }
